# dotfiles

dot_config/: mimeapps.list  pam-gnupg
dot_config/aichat/: symlink_functions
dot_config/aichat/llm-functions/: mcp.json  tools.txt
dot_config/aichat/roles/: ida.md  trans.md
dot_config/btop/: btop.conf
dot_config/fnott/: fnott.ini
dot_config/fontconfig/: fonts.conf
dot_config/foot/: foot.ini
dot_config/fuzzel/: fuzzel.ini
dot_config/gdb/: gdbinit
dot_config/git/: config
dot_config/goimapnotify/: executable_notify.sh  goimapnotify.conf
dot_config/goose/: config.yaml
dot_config/goose/custom_providers/: custom_wings.json
dot_config/goose/recipes/: evaluate-article.yaml  (+2 more)
dot_config/hypr/: hypridle.conf  hyprland.conf
dot_config/isync/: isyncrc
dot_config/joshuto/: joshuto.toml  keymap.toml
dot_config/macchina/: macchina.toml
dot_config/msmtp/: config
dot_config/mutt/: mappings  muttrc
dot_config/private_fcitx5/: private_config
dot_config/private_qutebrowser/: autoconfig.yml  config.py
dot_config/pwnit/: config.toml  template.py
dot_config/qt6ct/: qt6ct.conf
dot_config/rbw/: config.json
dot_config/sioyek/: keys_user.config  prefs_user.config
dot_config/translate-shell/: init.trans
dot_config/wget/: wgetrc
dot_config/xdg-desktop-portal-termfilechooser/: config
dot_config/yambar/: config.yml
dot_config/yazi/: init.lua  keymap.toml  package.toml  yazi.toml
dot_config/zellij/: config.kdl
dot_config/zsh/: dot_zshrc
dot_idapro/: ida.reg  pyproject.toml
dot_idapro/cfg/: HexRaysPyTools.cfg  idapython.cfg
(+104 files in other folders)
