[project]
name = "idapro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asciinet>=0.3.1",
    "bs4>=0.0.2",
    "flare-capa>=9.2.1",
    "ida-pro-mcp>=1.3.0",
    "keystone-engine>=0.9.2",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langchain-openai>=0.3.27",
    "networkx>=3.5",
    "python-statemachine>=2.5.0",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "yara-python>=4.5.4",
]
